--- a/src/css/Questions.css
+++ b/src/css/Questions.css
@@ -82,3 +82,32 @@
 	font-size: 1.5rem;
 	line-height: 1.85rem;
 }
+
+.No-questions-available {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+
+.No-questions-available-h1 {
+	margin-bottom: -4rem;
+}
+
+.Lottie {
+	width: 350px;
+	max-width: 350px;
+	transition: all 0.2s ease-in-out;
+	opacity: 0.5;
+	padding: 0;
+	margin: 0;
+}
+.No-questions-available-p {
+	text-align: center;
+	color: rgb(var(--clr-darkBlue));
+	max-width: 37.5rem;
+	padding: 2rem;
+	margin-top: -6rem;
+}
