--- a/src/css/App.css
+++ b/src/css/App.css
@@ -266,3 +266,76 @@ main {
 .p-Inline-1 {
 	padding-inline: 1rem;
 }
+
+/* Loading Screen */
+.Loading-screen {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	width: 100%;
+	height: 100%;
+}
+
+.question-block {
+	width: 100%;
+	height: 100%;
+	gap: 1rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	align-items: flex-start;
+	opacity: 0.5;
+}
+
+.question-loader {
+	width: 100%;
+	height: 3rem;
+	background: linear-gradient(
+		90deg,
+		rgba(41, 50, 100, 0.1) 0%,
+		rgba(77, 91, 158, 0.3) 50%,
+		rgba(41, 50, 100, 0.1) 100%
+	);
+	animation: shimmer 5s infinite linear;
+	border-radius: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.awenser-loader {
+	width: 100%;
+	height: 3rem;
+	display: flex;
+	gap: 2rem;
+	justify-content: flex-start;
+	align-items: center;
+}
+
+.awenser-loader > * {
+	width: 100px;
+	height: 2.5rem;
+	animation: shimmer 10s infinite linear;
+	border: none !important;
+	background: linear-gradient(
+		90deg,
+		rgba(41, 50, 100, 0.2) 0%,
+		rgba(77, 91, 158, 0.2) 50%,
+		rgba(41, 50, 100, 0.2) 100%
+	);
+}
+
+@keyframes shimmer {
+	0% {
+		background-position: -30vw 0;
+	}
+	100% {
+		background-position: 30vw 0;
+	}
+}
+
+.Questions--h1 {
+	font-size: var(--fs-32px);
+	line-height: var(--lh-24px);
+	font-weight: 700;
+	text-align: center;
+}
