--- a/src/css/Questions.css
+++ b/src/css/Questions.css
@@ -111,3 +111,46 @@
 	padding: 2rem;
 	margin-top: -6rem;
 }
+
+.pagination {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	gap: 1rem;
+	margin-top: 2rem;
+}
+
+.pagintation__button {
+	padding: 0.5rem 1rem;
+	background-color: transparent;
+	cursor: pointer;
+	transition: all 0.2s ease-in-out;
+	border: none;
+	color: rgb(var(--clr-darkBlue));
+}
+
+.disabled {
+	pointer-events: none;
+	opacity: 0.3;
+}
+
+.progress-bar {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+	gap: 1rem;
+	width: 100%;
+	background-color: rgb(var(--clr-desatBlue));
+}
+
+.progress-bar__fill {
+	width: 100%;
+	height: 0.2rem;
+	background-color: rgb(var(--clr-darkBlue));
+}
+
+.hidden {
+	display: none;
+}
